@startuml

title __REPOSITORY's Class Diagram__\n

  package com.epam.training {
    package com.epam.training.stock {
      package com.epam.training.stock.repository {
        class StockRepository {
            {static} - SELECT_STOCK_BY_ID : String
            {static} - SELECT_STOCK_BY_STOCK_ID : String
            {static} - SELECT_LAST_INSERTED_STOCK : String
            {static} - UPDATE_STOCK_QUANTITY_BY_ID : String
            {static} - GET_ID_FROM_STOCK_ID : String
            - jdbcTemplate : NamedParameterJdbcTemplate
            - simpleJdbcInsert : SimpleJdbcInsert
            + StockRepository()
            + getLastInsertedStock()
            + insertNewStock()
            + createStockIfNotExists()
            + getStockByStockId()
            + getStockById()
            + updateQuantityById()
        }
      }
    }
  }
  

  package com.epam.training {
    package com.epam.training.stock {
      package com.epam.training.stock.repository {
        class StockRowMapper {
            + mapRow()
        }
      }
    }
  }
  

  StockRepository -up-|> NamedParameterJdbcDaoSupport
  StockRepository +-down- StockRowMapper
  StockRowMapper -up-|> RowMapper


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
